--- a/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
+++ b/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="mainCss.css" />
+    <Content Include="singleton\singletonexample.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -90,6 +91,15 @@
       <DependentUpon>MainMaster.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="show.cs" />
+    <Compile Include="singleton\Singleton.cs" />
+    <Compile Include="singleton\singletonexample.aspx.cs">
+      <DependentUpon>singletonexample.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="singleton\singletonexample.aspx.designer.cs">
+      <DependentUpon>singletonexample.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
