Started Setup page

--- a/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
+++ b/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -72,7 +73,7 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="mainCss.css" />
-    <Content Include="singleton\singletonexample.aspx" />
+    <Content Include="singleton\SingletonDemo.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -93,12 +94,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="show.cs" />
     <Compile Include="singleton\Singleton.cs" />
-    <Compile Include="singleton\singletonexample.aspx.cs">
-      <DependentUpon>singletonexample.aspx</DependentUpon>
+    <Compile Include="singleton\SingletonDemo.aspx.cs">
+      <DependentUpon>SingletonDemo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="singleton\singletonexample.aspx.designer.cs">
-      <DependentUpon>singletonexample.aspx</DependentUpon>
+    <Compile Include="singleton\SingletonDemo.aspx.designer.cs">
+      <DependentUpon>SingletonDemo.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
