--- a/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
+++ b/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
@@ -61,6 +61,7 @@
     <Content Include="addons\angular.min.js" />
     <Content Include="addons\bootstrap.min.css" />
     <Content Include="addons\bootstrap.min.js" />
+    <Content Include="addons\test.aspx" />
     <Content Include="MainMaster.Master" />
     <Content Include="addons\angular.min.js.map" />
     <None Include="Web.Debug.config">
@@ -77,6 +78,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addons\test.aspx.cs">
+      <DependentUpon>test.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="addons\test.aspx.designer.cs">
+      <DependentUpon>test.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -92,7 +100,6 @@
       <DependentUpon>MainMaster.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="show.cs" />
     <Compile Include="singleton\Singleton.cs" />
     <Compile Include="singleton\SingletonDemo.aspx.cs">
       <DependentUpon>SingletonDemo.aspx</DependentUpon>
