Added Builder Pattern C#

--- a/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
+++ b/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
@@ -62,6 +62,7 @@
     <Content Include="addons\bootstrap.min.css" />
     <Content Include="addons\bootstrap.min.js" />
     <Content Include="addons\test.aspx" />
+    <Content Include="builder\BuilderDemo.aspx" />
     <Content Include="MainMaster.Master" />
     <Content Include="addons\angular.min.js.map" />
     <None Include="Web.Debug.config">
@@ -84,6 +85,14 @@
     </Compile>
     <Compile Include="addons\test.aspx.designer.cs">
       <DependentUpon>test.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="builder\builder.cs" />
+    <Compile Include="builder\BuilderDemo.aspx.cs">
+      <DependentUpon>BuilderDemo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="builder\BuilderDemo.aspx.designer.cs">
+      <DependentUpon>BuilderDemo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
