--- a/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
+++ b/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="mainCss.css" />
+    <Content Include="observer\ObserverDemo.aspx" />
     <Content Include="singleton\SingletonDemo.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -116,6 +117,14 @@
     </Compile>
     <Compile Include="MainMaster.Master.designer.cs">
       <DependentUpon>MainMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="observer\Observer.cs" />
+    <Compile Include="observer\ObserverDemo.aspx.cs">
+      <DependentUpon>ObserverDemo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="observer\ObserverDemo.aspx.designer.cs">
+      <DependentUpon>ObserverDemo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="singleton\Singleton.cs" />
