--- a/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
+++ b/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
@@ -19,6 +19,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,6 +65,7 @@
     <Content Include="addons\test.aspx" />
     <Content Include="builder\BuilderDemo.aspx" />
     <Content Include="Factory\FactoryDemo.aspx" />
+    <Content Include="flyweight\FlyweightDemo.aspx" />
     <Content Include="MainMaster.Master" />
     <Content Include="addons\angular.min.js.map" />
     <None Include="Web.Debug.config">
@@ -110,6 +112,14 @@
     </Compile>
     <Compile Include="Factory\FactoryDemo.aspx.designer.cs">
       <DependentUpon>FactoryDemo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="flyweight\Flyweight.cs" />
+    <Compile Include="flyweight\FlyweightDemo.aspx.cs">
+      <DependentUpon>FlyweightDemo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="flyweight\FlyweightDemo.aspx.designer.cs">
+      <DependentUpon>FlyweightDemo.aspx</DependentUpon>
     </Compile>
     <Compile Include="MainMaster.Master.cs">
       <DependentUpon>MainMaster.Master</DependentUpon>
