--- a/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
+++ b/gfdesignpatterns/gfdesignpatterns/gfdesignpatterns.csproj
@@ -80,6 +80,7 @@
     <Content Include="mainCss.css" />
     <Content Include="observer\ObserverDemo.aspx" />
     <Content Include="singleton\SingletonDemo.aspx" />
+    <Content Include="state\state.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -145,6 +146,14 @@
     <Compile Include="singleton\SingletonDemo.aspx.designer.cs">
       <DependentUpon>SingletonDemo.aspx</DependentUpon>
     </Compile>
+    <Compile Include="state\state.aspx.cs">
+      <DependentUpon>state.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="state\state.aspx.designer.cs">
+      <DependentUpon>state.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="state\stateController.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
